--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     </parent>
 
     <groupId>pl.put.poznan</groupId>
-    <artifactId>io-project-architecture</artifactId>
-    <version>0.1</version>
+    <artifactId>Scenario-Quality-Checker</artifactId>
+    <version>0.2</version>
 
 	<properties>
         <java.version>11</java.version>
